JG-2004-04-27-0: Bugfix:    Disable dynamic loading of spooling libs on IRIX65,
                            AIX43 and AIX51: The classic spooling references
                            global variables (Master_*_List) and reverse 
                            resolution of symbols in DSO's seems to be broken 
                            on these platforms.
                 Changed:   qmaster, spoolinit, spooldefaults
                 Review:    EB

MD-2004-04-26-0: Bugfix:    qping fails if, SGE_QMASTER_PORT was not set.
                            (In case of using sge_qmaster service)
                 Changed:   sgemaster_template
                 Review:    AH
                 Issue:     #989

JG-2004-04-23-0: Bugfix:    Fixed core dump in event master module.
                 Changed:   qmaster
                 Review:    AD

AD-2004-04-22-0: Bugfix:    Changed thread startup order back to old one.
                            Register job resend events for jobs with status
                            'JTRANSFERING' in a separate function.
                 Changed:   qmaster
                 Review:    AH

SG-2004-04-22-2: Bugfix:   fixed memory leak in berkeleydb spooling for jobs
                           fixed memory leak in qsub 
                 Changed:  qmaster, qsub
                 Review:   AS, DT

HP-2004-04-22-0: Enhancem.: Added Docu for delegated file staging

SG-2004-04-22-1: Bugfix:   fixed memory leak cluster queue modification
                 Changed:  qmaster
                 Review:   DT, EB

SG-2004-04-22-0: Bugfix:    - fixed memory leak in sge_event_master
                            - scheduler would exit, if the qmaster is gone for
                              a while
                 Changed:   qmaster, schedd
                 Review:    CR, AD


AA-2004-04-22-0: Bugfix:    - loadadjustments display of load values was broken
                 Changed:   qmon
                 Review:    SG
